<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="100"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/hamburger">
        </ImageView>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="80"
            android:src="@drawable/logo">
        </ImageView>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/profile">
        </ImageView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/heading_text"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_weight="0.2"
                android:layout_height="100dp"
                android:src="@drawable/gan">
            </ImageView>

        </LinearLayout>

    <RelativeLayout
        android:id="@+id/horoscopes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/horoscopes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily Horoscopes"
            android:textColor="@color/Black"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/foods_see_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="See All"
            android:gravity="center"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:drawablePadding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="14Sp"
            android:drawableRight="@drawable/forward"/>

    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/horoscopes_text"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/horoscopes_view_pager"
        android:layout_width="wrap_content"
        android:layout_height="224dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"/>
        <RelativeLayout
            android:id="@+id/astrologer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/astrologer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Talk to an Astrologer"
                android:textColor="@color/Black"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:textSize="20sp">
            </TextView>

            <TextView
                android:id="@+id/astrologer_see_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See All"
                android:gravity="center"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:drawablePadding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="14Sp"
                android:drawableRight="@drawable/forward"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/report_text"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/astrologer_view_pager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <RelativeLayout
            android:id="@+id/reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/reports_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reports"
                android:textColor="@color/Black"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:textSize="20sp">
            </TextView>

            <TextView
                android:id="@+id/reports_see_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See All"
                android:gravity="center"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:drawablePadding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="14Sp"
                android:drawableRight="@drawable/forward"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/astrolger_text"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/reports_view_pager"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <RelativeLayout
            android:id="@+id/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/ask_question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ask a Question"
                android:textColor="@color/Black"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:textSize="20sp">
            </TextView>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/quesion_text"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardCornerRadius="12dp"
           android:padding="10dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           app:cardBackgroundColor="#ede9df"
           android:layout_marginBottom="50dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/choose_category_text_view"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Choose Category"
                   android:textColor="@color/Black"
                   android:gravity="center"
                   android:layout_margin="5dp"
                   android:layout_centerVertical="true"
                   android:textSize="20sp">
               </TextView>

               <Spinner
                   android:id="@+id/glucoseSpinner"
                   android:layout_width="match_parent"
                   android:layout_height="30dp"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/price"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:layout_marginBottom="20dp"
                       android:layout_marginStart="10dp"
                       android:layout_weight="0.3"
                       android:textColor="@color/Black"
                       android:text="Rs 99(including GST)"/>

                   <TextView
                       android:id="@+id/what_ask"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:layout_marginBottom="20dp"
                       android:layout_marginStart="10dp"
                       android:layout_weight="0.3"
                       android:textColor="@color/Black"
                       android:text="ideas what to ask "/>
                   <TextView
                       android:id="@+id/talknowbutton"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="12sp"
                       android:padding="10dp"
                       android:layout_marginTop="10dp"
                       android:layout_weight="0.7"
                       android:layout_marginEnd="10dp"
                       android:gravity="center_horizontal"
                       android:background="@drawable/background_orange"
                       android:textColor="#fff"
                       android:text="Talk Now "/>

               </LinearLayout>

           </LinearLayout>
       </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>